--- a/css/index/keyframes.css
+++ b/css/index/keyframes.css
@@ -32,28 +32,38 @@
     }
 }
 
-@-webkit-keyframes grainAnimation {
-    0%, 100% { transform: translate(0, 0); }
-    10% { transform: translate(-5%, -5%); }
-    20% { transform: translate(-10%, 5%); }
-    30% { transform: translate(5%, -10%); }
-    40% { transform: translate(-5%, 15%); }
-    50% { transform: translate(-10%, 5%); }
-    60% { transform: translate(15%, 0); }
-    70% { transform: translate(0, 10%); }
-    80% { transform: translate(-15%, 0); }
-    90% { transform: translate(10%, 5%); }
-}
-
-@keyframes grainAnimation {
-    0%, 100% { transform: translate(0, 0); }
-    10% { transform: translate(-5%, -5%); }
-    20% { transform: translate(-10%, 5%); }
-    30% { transform: translate(5%, -10%); }
-    40% { transform: translate(-5%, 15%); }
-    50% { transform: translate(-10%, 5%); }
-    60% { transform: translate(15%, 0); }
-    70% { transform: translate(0, 10%); }
-    80% { transform: translate(-15%, 0); }
-    90% { transform: translate(10%, 5%); }
+@keyframes noise {
+    0% {
+        transform: translate3d(0, 9px, 0);
+    }
+    10% {
+        transform: translate3d(-1px, -4px, 0);
+    }
+    20% {
+        transform: translate3d(-8px, 2px, 0);
+    }
+    30% {
+        transform: translate3d(9px, -9px, 0);
+    }
+    40% {
+        transform: translate3d(-2px, 7px, 0);
+    }
+    50% {
+        transform: translate3d(-9px, -4px, 0);
+    }
+    60% {
+        transform: translate3d(2px, 6px, 0);
+    }
+    70% {
+        transform: translate3d(7px, -8px, 0);
+    }
+    80% {
+        transform: translate3d(-9px, 1px, 0);
+    }
+    90% {
+        transform: translate3d(6px, -5px, 0);
+    }
+    to {
+        transform: translate3d(-7px, 0, 0);
+    }
 }
